opam-version: "1.2"
maintainer: "xclerc@janestreet.com"
authors: ["Xavier Clerc"]
license: "Apache-2.0"
homepage: "https://github.com/ocaml-ppx/ppx_view"
bug-reports: "https://github.com/ocaml-ppx/ppx_view"
dev-repo: "https://github.com/ocaml-ppx/ppx_view.git"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
available: [ ocaml-version >= "4.04" ]
depends: [
  "dune" {build}
  "ocaml-migrate-parsetree"
  "ppx_expect"
]
